Se agregó el archivo git ignore

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title></title>
 	</head>
 	<body>
-		<p> Este es mi primer commit con GIT <P>
-		<body>
+		<p> Este es 1er commit con GIT <P>
+		<p> Este es mi segundo commit con GIT <P>
+	<body>
 </html>
