Se agregó formato a Clientes

--- a/clientes.html
+++ b/clientes.html
@@ -1,1 +1,10 @@
-Aquí coloco el código de clientes html
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+	</head>
+	<body>
+		<p> Clientes - Enviar a repositorio remoto <P>
+	<body>
+</html>
